<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



   <TextView
           android:id="@+id/textView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp"
           android:textSize="24sp"
           android:text="@string/textView"
           android:layout_marginStart="100dp"
           />

    <Spinner
            android:id="@+id/simpleLangSpinner"
            android:layout_marginBottom="50dp"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="100dp"
            tools:listitem="@android:layout/simple_spinner_dropdown_item"

            />

    <Button
            android:id="@+id/simplelangBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            android:layout_marginStart="150dp"

            />

    <TextView

            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:text="@string/In"
            android:layout_marginStart="150dp"
            android:visibility="invisible"

              />

    <TextView

            android:id="@+id/hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/Hin"
            android:layout_marginStart="150dp"
            android:visibility="invisible"

    />

    <TextView
            android:id="@+id/Alem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/Aleman"
            android:layout_marginStart="150dp"
            android:visibility="invisible"

    />

    <TextView
            android:id="@+id/Frances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/Frances"
            android:layout_marginStart="150dp"
            android:visibility="invisible"

    />

    <TextView
            android:id="@+id/Holanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/Holandes"
            android:layout_marginStart="150dp"
            android:visibility="invisible"

    />


</LinearLayout>